# spark-docker-compose

./: .pdm-python  README.md  docker-compose copy.yaml  docker-compose-cadvisor.yaml  docker-compose.yaml  my-prometheus-client.py  prometheus.yml  pyproject.toml  spark--org.apache.spark.deploy.master.Master-1-a5b4f30fa49c.out
app/api/: Dockerfile  app.py  fword.py  requirements.txt  requirements_fastapi.txt  socket_fastapi.py  socket_server.py
app/wc/: network_wordcount.py  network_wordcount_ori.py  network_wordcount_websocket.py
